@@ -1,5 +1,11 @@
 2002-09-28  John Harper  <jsh@unfactored.org>
 
+	* events.c (configure_request): for `position' configuration,
+	pass nil x or y if unset (instead of just ignoring it). Part of
+	fixing #83431
+
+2002-09-28  John Harper  <jsh@unfactored.org>
+
 	Some performance optimizations, especially avoiding server
 	round trips:
 
